wrapped up help section, other small bug fixes

--- a/css/style.css
+++ b/css/style.css
@@ -835,7 +835,7 @@ td { vertical-align: top; }
   }
 
   .songrow, .artistrow, .termsrow {
-    min-width: 800px;
+    min-width: 830px;
   }
 }
 
